unpackaged/main/default/objects/PreScreen_Model__c/PreScreen_Model__c.object-meta.xml
<CustomObject>
    <label>PreScreen Model</label>
    <nameField>
        <displayFormat>PSM - {0}</displayFormat>
        <label>PreScreen Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreScreen Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>