unpackaged/main/default/objects/PreScreen_Model__c/fields/Credit_Review_Controller__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review Controller</label>
    <referenceTo>Credit_Review_Controller__c</referenceTo>
    <relationshipLabel>PreScreen Models</relationshipLabel>
    <relationshipName>PreScreen_Models</relationshipName>
    <type>Lookup</type>
</CustomField>