unpackaged/main/default/objects/PreScreen_Model__c/fields/Model_Decision_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Model_Decision_DateTime__c</fullName>
    <label>Model Decision DateTime</label>
    <type>DateTime</type>
</CustomField>