unpackaged/main/default/objects/PreScreen_Model__c/fields/Model_ID__c.field-meta.xml
<CustomField>
    <fullName>Model_ID__c</fullName>
    <externalId>true</externalId>
    <label>Model ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>